src/objects/MG_CollectionItem__c.object
<CustomObject>
    <fields>
        <fullName>IsBlackListed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBlackListed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFavourite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFavourite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Movie_Id__c</fullName>
        <label>Movie Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collection_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Collection Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CollectionItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>